[gd_scene load_steps=6 format=3 uid="uid://ht6hp7kn2utx"]

[ext_resource type="Script" path="res://scripts/mobile_pause.gd" id="1_l5gw0"]
[ext_resource type="PackedScene" uid="uid://b8tsw525wce4u" path="res://scenes/canvas_ui/btn_click.tscn" id="2_d4dlg"]

[sub_resource type="Animation" id="Animation_owhjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lccb2"]
resource_name = "mobile_pause_button"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imt8b"]
_data = {
"RESET": SubResource("Animation_owhjr"),
"mobile_pause_button": SubResource("Animation_lccb2")
}

[node name="Mobile_Pause" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l5gw0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Pause"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_imt8b")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="btn_click" parent="." instance=ExtResource("2_d4dlg")]

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
